# pi_drone

./: CMakeLists.txt  README.md  install.sh  main.cpp  pi_drone.kdev4  pi_motorctl.cpp  pi_motorctl.hpp  pi_serial.cpp  pi_serial.hpp  pi_sock.cpp  pi_sock.hpp  pidrn.service
arduino/: README.txt  drona.ino
